@@ -13,3 +13,11 @@
 !else
 # The current makefile go here
 !endif
+
+!if "$(_BUILDARCH)" == "IA64"
+C_DEFINES=$(C_DEFINES) -DIOMTR_OSFAMILY_WINDOWS -DIOMTR_OS_WIN64 -DIOMTR_CPU_IA64
+!elseif "$(_BUILDARCH)" == "AMD64"
+C_DEFINES=$(C_DEFINES) -DIOMTR_OSFAMILY_WINDOWS -DIOMTR_OS_WIN64 -DIOMTR_CPU_AMD64
+!else
+C_DEFINES=$(C_DEFINES) -DIOMTR_OSFAMILY_WINDOWS -DIOMTR_OS_WIN32 -DIOMTR_CPU_I386 
+!endif
